fix letter spacing

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ ul {
 }
 
 #bio-content {
+  flex: 0 0 auto;
 	display:inline-block;
   padding: 0 24px;
 }
@@ -48,7 +49,8 @@ ul {
 }
 
 .content-group ul > li {
-    margin: 4px 0;
+  margin: 4px 0;
+  letter-spacing: 0.5px;
 }
 
 div.centered {
@@ -81,6 +83,7 @@ div.txt-cursor {
 .years {
   opacity: 0.5;
   float: right;
+  letter-spacing: 0px;
 }
 
 /* animation */
